<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small">

    <TextView
        android:id="@+id/textLoadState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/load_state_content_description"
        android:elevation="@dimen/uiSize_4dp"
        android:textAlignment="center"
        android:textColor="?android:textColorPrimary"
        android:textSize="12sp"
        tools:text="Timeout" />

    <ProgressBar
        android:id="@+id/progressLoadState"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/uiSize_24dp"
        android:layout_height="@dimen/uiSize_24dp"
        android:layout_gravity="center"
        android:layout_marginVertical="@dimen/margin_small" />

    <Button
        android:id="@+id/buttonRetryLoadState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/load_state_button_retry_description"
        android:text="@string/button_retry" />
</LinearLayout>