<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textSearchEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_search_event_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:selectAllOnFocus="true"
            tools:text="event-name" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/eventList"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uiSize_0dp"
        android:contentDescription="@string/event_list_description"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSearch"
        tools:itemCount="5"
        tools:listitem="@layout/item_event" />

    <ProgressBar
        android:id="@+id/progressBarEventsContent"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/uiSize_20dp"
        android:layout_height="@dimen/uiSize_20dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <Button
        android:id="@+id/buttonRetryNoEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_retry"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/textEmptyEventList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_empty_events"
        android:textColor="@color/colorGray800"
        android:textSize="@dimen/textSize_normal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>